[project]
name = "dmon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Atomie CHEN", email = "atomic_cwh@163.com" }
]
requires-python = ">=3.8"
dependencies = [
    "psutil>=7.1.0",
    "tomli>=2.2.1 ; python_full_version < '3.11'",
]

[project.scripts]
dmon = "dmon.__main__:main"

[build-system]
requires = ["uv_build>=0.8.4,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff>=0.13.3",
]
