[project]
name = "dmon"
version = "0.1.1"
description = "A lightweight, cross-platform daemon manager that runs any command as a background process."
readme = "README.md"
authors = [
    { name = "Atomie CHEN", email = "atomic_cwh@163.com" }
]
requires-python = ">=3.8"
dependencies = [
    "colorama>=0.4.6",
    "psutil>=7.1.0",
    "pyyaml>=6.0.3",
    "termcolor>=2.4.0",
    "tomli>=2.2.1 ; python_full_version < '3.11'",
]
keywords = ["dmon", "daemon", "background", "detach", "process management"]

[project.urls]
"Homepage" = "https://github.com/atomiechen/dmon"
"Bug Tracker" = "https://github.com/atomiechen/dmon/issues"
Changelog = "https://github.com/atomiechen/dmon/blob/main/CHANGELOG.md"

[project.scripts]
dmon = "dmon.__main__:main"

[build-system]
requires = ["uv_build>=0.8.4,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff>=0.13.3",
]
